blog/thanos-loki-istio-cluster/monitoring-cluster/istio/loki-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
spec:
  gateways:
    - loki
  hosts:
    - "loki.172.19.255.200.nip.io"
  http:
    - name: "loki"
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: loki-loki-distributed-gateway.loki.svc.cluster.local
            port:
              number: 80
